--- a/debt-structuring-corporate-finance.html
+++ b/debt-structuring-corporate-finance.html
@@ -51,10 +51,10 @@ maximum-scale=1.0, user-scalable=no" />
                         </ul>
                     </li>
                     <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                    <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                    <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                         Finance</a></li>
                     <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                    <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                    <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
                 </ul>
             </li>
             <li><a href="sectors.html">Sectors</a></li>
@@ -65,7 +65,7 @@ maximum-scale=1.0, user-scalable=no" />
                 </ul>
             </li>
             <li><a href="news-letter.html">News Letters &amp; Articles</a></li>
-            <li><a href="careers.html">Contact US</a></li>
+            <li><a href="careers.html">Contact Us</a></li>
         </ul>
     </div>
 </nav>
@@ -102,13 +102,13 @@ maximum-scale=1.0, user-scalable=no" />
                                 </ul>
                             </li>
                             <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                            <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                            <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                                 Finance</a></li>
                             <li><a href="process-improvement-risk-advisory.html">Process Improvement &amp; Risk Advisory</a>
                             </li>
 
 
-                            <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
 
 
                         </ul>
@@ -133,12 +133,16 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-company-secretarial"></div>
+        <div class="bg-corporate-finance"></div>
         <div class="centered main-text-heading">
-            Secretarial Compliances
+            Debt Restructuring &amp;
+            <br>
+            Corporate Finance
         </div>
     </div>
 </div>
+
+
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3 pane-left">
@@ -155,13 +159,13 @@ maximum-scale=1.0, user-scalable=no" />
 
                             </li>
                             <br> <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                            <br><li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                            <br><li><a style="font-weight: bold; padding-left: 10px; text-decoration: underline; color: rgb(134, 206, 19);" href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                             Finance</a></li>
                             <br> <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                            <br> <li><a style="font-weight: bold; padding-left: 10px; text-decoration: underline; color: rgb(134, 206, 19);" href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <br> <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
 
                         </ul>
                         <br>
@@ -192,69 +196,82 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9 pane-right">
             <div class="body-text-2">
-<!--                <h2>Secretarial Compliances</h2>-->
+                <h2>Debt Structuring & Corporate Finance - The Best Way Forward </h2>
+                <br><h4>
+                Debt Raising & Restructuring
+
+            </h4>
                 <p>
-                    Various registrations under different acts are needed for organisations to conduct any type of activity in the country and certain compliances are also needed to be fulfilled for certain industries that an organisation might want to venture into. Along with this all the Companies, LLPs, Societies, Trusts, Non-Profits and other legal entities are required to statutorily report from time-to-time certain information under their respective governing Acts. The information to be reported ranges from Financial information like Revenue, Profits, Capital, Charge on Assets etc to Non-Financial Information like List of Directors, Shareholders, Registered Office of the Entity, Members of Society etc.
+                    The current approach adopted by various businesses to raise and manage loans is majorly through
+                    direct communication with the banks. However, this doesn’t always work in favour of the borrower to
+                    get the best rates of interest, repayment terms or moratorium periods.
 
                 </p>
-                <h4>Finsurety’s Secretarial Compliances & Incorporation Services</h4>
-                <p>At Finsurety Advisors, along with our team of professionals assist and advise business owners/promoters/Non-Profits in incorporating the most suitable legal structure so as to meet the needs of their business while keeping their compliance cost at the lowest. The right legal structure will always help the organisation make most of the opportunities that may arise from time to time.
-                    We also help organisations with various statutory filings as required under various laws at every stage of their business lifecycle. We help clients ensure timely reporting of accurate information and prepare the appropriate documentation as may be required to avoid unnecessary penalties and litigation.
-                    We offer our incorporation & registration services including but not limited to the following categories:
+                <h4>
+                    How can we help in Debt Raising & Restructuring ? </h4>
+                <p>
+
+                    At Finsurety Advisors, having successfully raised and restructured debts of over 800 crores, we
+                    provide our clients with an end to end solution for raising and structuring of different types of
+                    loans including project loans, equipment financing, SME financing etc based on the client’s needs by
+                    considering factors such as future cash flows, suitable interest rates, risk mapping, repayment
+                    schedules just to name a few.
+
                 </p>
-                <br>
-                <h6>Incorporation of:</h6>
+                Our services in debt raising and restructuring include services not limited to:
                 <b>
-                <ul style="padding-left: 40px">
-                    <li>
-                        Company including OPC & Section 8 Company
-                    </li>
-                    <li>
-                        Partnership including Limited Liability Partnership
-                    </li>
-                    <li>
-                        Section 8 Company
-                    </li>
-                    <li>
-                        Societies & Trusts
-                    </li>
-                    <li>
-                        Any per requirement
-                    </li>
+                    <ul style="padding-left: 40px">
+                        <li>Raising Loans at best interest rates available
+                        <li>Takeover and Restructuring of existing debt
+                        <li>Credit Ratings
+                        <li>Preparation of detailed project reports
+                        <li>Managing repayments and exit strategies
+                        <li>Capital Structure Management
+                        <li>Management Information Systems
+                        <li>Debt advisory
+                        <li>Services to underperforming and financially distressed businesses
+                        <li>Advice to lenders, stakeholders and advisors
 
-                </ul></b>
-                <br>
-
-
-                <h6>Secretarial Compliances under:</h6>
-                <b><ul style="padding-left: 40px">
-                    <li>
-                        Central Goods & Service Tax Act, 2017
-                    </li>
-                    <li>
-                        Income Tax Act, 1961
-                    </li>
-                    <li>
-                        Foreign Contribution Regulation Act, 2010
-                    </li>
-                    <li>
-                        The Employees‟ Provident Funds And Miscellaneous Provisions Act, 1952
-                    </li>
-                    <li>
-                        The Employees’ State Insurance Act, 1948
-                    </li>
-                    <li>
-                        As per requirement
-                    </li>
-
-                </ul>
+                    </ul>
                 </b>
-                <br><br>
+                <h4>
+                    Corporate Finance </h4>
+                <p>
+
+                    Every decision made in a business has financial implications, and any decision that involves the use
+                    of money is a corporate financial decision. In today's challenging corporate, regulatory, legal and
+                    accounting environment, there is a need for robust and independent corporate financial decisions.
+                </p>
+                <p>
+                    Through the course of business, organisations are required to deal with complex decisions relating
+                    to investments, funding and capital structures. Companies often rely on experienced advisors to
+                    guide them through the process of decision making. This includes companies that could be either in
+                    the early stage, the growth stage or the matured stage of the life cycle.
+
+                </p>
+                <h4>
+                    How can we help in Corporate Finance ?
+                </h4>
+                <p>
+                    At Finsurety Advisors, we provide in-depth analysis of the market, evaluate the alternatives, and
+                    propose financial and strategic solutions. We focus on various aspects such as market pricing,
+                    timing, transaction structure. We advise clients on various intricate and structured decisions at
+                    different stages and provide robust and bespoke solutions in a variety of situations such as
+                    mergers, acquisitions, divestment, joint ventures and capital raising.
+                </p>
+                <p>
+                    We offer services across debt restructuring, corporate structuring solutions, business restructuring
+                    advice, inbound and outbound investment structuring and more.
+
+                </p><br><br>
                 <br>
                 <br>
 <!--                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">-->
 <!--                <br>-->
+<!--                <br>-->
 <!--                <h4>Reporting Partners</h4>-->
+<!--                <br>-->
+<!--                <br>-->
 <!--                <div class="row">-->
 <!--                    <div class="col-sm-4">-->
 <!--                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">-->
@@ -268,6 +285,8 @@ maximum-scale=1.0, user-scalable=no" />
 <!--                        <br>-->
 <!--                        Former Sr. Manager, EY India (Assurance)-->
 <!--                        <br>-->
+<!--                        <br>-->
+
 <!--                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>-->
 <!--                        <br>-->
 <!--                        <a href="#f">Follow on Linkedin</a>-->
@@ -285,6 +304,8 @@ maximum-scale=1.0, user-scalable=no" />
 <!--                        <br>-->
 <!--                        Former Sr. Manager, EY India (Assurance)-->
 <!--                        <br>-->
+<!--                        <br>-->
+
 <!--                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>-->
 <!--                        <br>-->
 <!--                        <a href="#f">Follow on Linkedin</a>-->
@@ -295,8 +316,8 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
 
     </div>
-
 </div>
+
 <div class="footer-section">
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
