--- a/internal-audit.html
+++ b/internal-audit.html
@@ -51,10 +51,10 @@ maximum-scale=1.0, user-scalable=no" />
                         </ul>
                     </li>
                     <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                    <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                    <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                         Finance</a></li>
                     <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                    <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                    <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
                 </ul>
             </li>
             <li><a href="sectors.html">Sectors</a></li>
@@ -102,13 +102,13 @@ maximum-scale=1.0, user-scalable=no" />
                                 </ul>
                             </li>
                             <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                            <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                            <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                                 Finance</a></li>
                             <li><a href="process-improvement-risk-advisory.html">Process Improvement &amp; Risk Advisory</a>
                             </li>
 
 
-                            <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
 
 
                         </ul>
@@ -135,7 +135,7 @@ maximum-scale=1.0, user-scalable=no" />
     <div class="main-bg">
         <div class="bg-auditing-assurance"></div>
         <div class="centered main-text-heading">
-            Internal Audit &amp; <br> Investigative Audit
+            Contact Us
 
         </div>
     </div>
@@ -156,13 +156,13 @@ maximum-scale=1.0, user-scalable=no" />
 
                             </li>
                             <br> <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                            <br><li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                            <br><li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                             Finance</a></li>
                             <br> <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                            <br> <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <br> <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
 
                         </ul>
                         <br>
