--- a/old-files/index-old.html
+++ b/old-files/index-old.html
@@ -54,13 +54,13 @@ maximum-scale=1.0, user-scalable=no"/>
                             </ul>
                         </li>
                         <li><a href="../financial-accounting.html">Financial Accounting</a></li>
-                        <li><a href="../corporate-finance-debt-restructuring.html">Debt Syndication &amp; Corporate
+                        <li><a href="../debt-structuring-corporate-finance.html">Debt Syndication &amp; Corporate
                             Finance</a></li>
                         <li><a href="../process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
                         </li>
 
 
-                        <li><a href="../Company-secretarial.html">Company Secretarial</a></li>
+                        <li><a href="../secretarial-compliances.html">Company Secretarial</a></li>
 
 
                     </ul>
