--- a/other-audit.html
+++ b/other-audit.html
@@ -55,10 +55,10 @@ maximum-scale=1.0, user-scalable=no"/>
                         </ul>
                     </li>
                     <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                    <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                    <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                         Finance</a></li>
                     <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                    <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                    <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
                 </ul>
             </li>
             <li><a href="sectors.html">Sectors</a></li>
@@ -69,7 +69,7 @@ maximum-scale=1.0, user-scalable=no"/>
                 </ul>
             </li>
             <li><a href="news-letter.html">News Letters &amp; Articles</a></li>
-            <li><a href="careers.html">Contact US</a></li>
+            <li><a href="careers.html">Contact Us</a></li>
         </ul>
     </div>
 </nav>
@@ -106,14 +106,14 @@ maximum-scale=1.0, user-scalable=no"/>
                                 </ul>
                             </li>
                             <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                            <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                            <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                                 Finance</a></li>
                             <li><a href="process-improvement-risk-advisory.html">Process Improvement &amp; Risk
                                 Advisory</a>
                             </li>
 
 
-                            <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
 
 
                         </ul>
@@ -163,7 +163,7 @@ maximum-scale=1.0, user-scalable=no"/>
                             <br>
                             <li><a href="financial-accounting.html">Financial Accounting</a></li>
                             <br>
-                            <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                            <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                                 Finance</a></li>
                             <br>
                             <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
@@ -171,7 +171,7 @@ maximum-scale=1.0, user-scalable=no"/>
 
 
                             <br>
-                            <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
 
                         </ul>
                         <br>
