--- a/careers.html
+++ b/careers.html
@@ -51,10 +51,10 @@ maximum-scale=1.0, user-scalable=no" />
                         </ul>
                     </li>
                     <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                    <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                    <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                         Finance</a></li>
                     <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                    <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                    <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
                 </ul>
             </li>
             <li><a href="sectors.html">Sectors</a></li>
@@ -65,7 +65,7 @@ maximum-scale=1.0, user-scalable=no" />
                 </ul>
             </li>
             <li><a href="news-letter.html">News Letters &amp; Articles</a></li>
-            <li><a href="careers.html">Contact US</a></li>
+            <li><a href="careers.html">Contact Us</a></li>
         </ul>
     </div>
 </nav>
@@ -102,13 +102,13 @@ maximum-scale=1.0, user-scalable=no" />
                                 </ul>
                             </li>
                             <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                            <li><a href="corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+                            <li><a href="debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
                                 Finance</a></li>
                             <li><a href="process-improvement-risk-advisory.html">Process Improvement &amp; Risk Advisory</a>
                             </li>
 
 
-                            <li><a href="Company-secretarial.html">Secretarial Compliances</a></li>
+                            <li><a href="secretarial-compliances.html">Secretarial Compliances</a></li>
 
 
                         </ul>
