--- a/old-files/index-no-mobile-nav.html
+++ b/old-files/index-no-mobile-nav.html
@@ -54,13 +54,13 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
               </ul>
             </li>
             <li><a href="../financial-accounting.html">Financial Accounting</a></li>
-            <li><a href="../corporate-finance-debt-restructuring.html">Debt Structuring &amp; Corporate
+            <li><a href="../debt-structuring-corporate-finance.html">Debt Structuring &amp; Corporate
               Finance</a></li>
             <li><a href="../process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a>
             </li>
 
 
-            <li><a href="../Company-secretarial.html">Secretarial Compliances</a></li>
+            <li><a href="../secretarial-compliances.html">Secretarial Compliances</a></li>
 
 
           </ul>
