--- a/the-firm.html
+++ b/the-firm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
     <meta name="viewport" content="width=device-width, initial-scale = 1.0,
 maximum-scale=1.0, user-scalable=no"/>
-    <title>Finsurety</title>
+    <title>The Firm and Our Partners | Finsurety Advisors LLP</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -23,7 +23,10 @@ maximum-scale=1.0, user-scalable=no"/>
 
     <link rel="stylesheet" href="nav-mob.css">
     <script src="nav-mob.js"></script>
-
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
 </head>
 <body style="overflow-x: hidden">
 <!-- partial:index.partial.html -->
@@ -154,7 +157,8 @@ maximum-scale=1.0, user-scalable=no"/>
         Finsurety Advisors was incorporated in 2017 and has been in service for more than 4 years with clients ranging
         from sectors such as manufacturing, hospitality, infrastructure, startups, energy and technology. We aim to
         build an environment where ideas, innovations and solutions flow freely so as to add maximum value to our
-        clients and all the stakeholders associated with the firm at various levels.
+        clients and all the stakeholders associated with the firm at various levels. The sister concern of Finsurety
+        Advisors LLP is a Chartered Accountancy firm with more than 20 years of experience in various fields.
     </p>
     <br>
     <h2>Our Partners</h2>
@@ -162,7 +166,7 @@ maximum-scale=1.0, user-scalable=no"/>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3">
-                <img src="images/male.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+                <img src="images/male.jpeg" style="text-align: center;max-width:100%; max-height:100%;" alt="Ravinder Khanduja">
 <br>
 <br>
             </div>
@@ -188,7 +192,7 @@ maximum-scale=1.0, user-scalable=no"/>
         <br>
         <div class="row">
             <div class="col-sm-3">
-                <img src="images/Akash.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+                <img src="images/Akash.jpeg" style="text-align: center;max-width:100%; max-height:100%;" alt="Akash Khanduja">
                 <br><br>
             </div>
             <div class="col-sm-9">
