--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
+    <script type="text/javascript" src="whatsapp/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="whatsapp/floating-wpp.min.js"></script>
+    <link rel="stylesheet" href="whatsapp/floating-wpp.min.css">
+
     <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">-->
     <!--    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>-->
     <!--    <script src="script.js"></script>-->
@@ -327,6 +331,7 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
 <!--                </div>-->
 
 <!--                    </div>-->
+
 <div class="footer-section">
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
@@ -478,5 +483,18 @@ maximum-scale=1.0, user-scalable=no" name="viewport"/>
         </div>
     </div>
 </div>
+<div id="myDiv"></div>
 </body>
+<script type="text/javascript">
+    $(function () {
+        $('#myDiv').floatingWhatsApp({
+            phone: '+917895977777',
+            popupMessage: 'Hello, how may we assist you?',
+            showPopup: true,
+            headerTitle: 'Connect with us on WhatsApp!', //Popup Title
+            position: "right",
+            showOnIE: true
+        });
+    });
+</script>
 </html>
