--- a/our-team.html
+++ b/our-team.html
@@ -24,6 +24,9 @@ maximum-scale=1.0, user-scalable=no"/>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
+    <script type="text/javascript" src="whatsapp/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="whatsapp/floating-wpp.min.js"></script>
+    <link rel="stylesheet" href="whatsapp/floating-wpp.min.css">
 </head>
 <body style="overflow-x: hidden">
 <!-- partial:index.partial.html -->
@@ -161,7 +164,7 @@ maximum-scale=1.0, user-scalable=no"/>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3">
-                <img src="images/male.jpeg" style="text-align: center;max-width:100%; max-height:100%;" alt="Mr. Naveen Pruthi">
+                <img src="images/Naveen.jpeg" style="text-align: center;max-width:100%; max-height:100%;" alt="Mr. Naveen Pruthi">
 <br><br>
             </div>
             <div class="col-sm-9">
@@ -208,7 +211,7 @@ maximum-scale=1.0, user-scalable=no"/>
         <br>
         <div class="row">
             <div class="col-sm-3">
-                <img src="images/Nidhi.jpeg" style="text-align: center;max-width:100%; max-height:100%;" alt="Ms. Nidhi Solank">
+                <img src="images/Nidhi.jpeg" style="text-align: center;max-width:100%; max-height:100%;" alt="Ms. Nidhi Solanki">
            <br> <br></div>
             <div class="col-sm-9">
                 <div class="">
@@ -399,6 +402,18 @@ maximum-scale=1.0, user-scalable=no"/>
         </div>
     </div>
 </div>
-
+<div id="myDiv"></div>
 </body>
+<script type="text/javascript">
+    $(function () {
+        $('#myDiv').floatingWhatsApp({
+            phone: '+917895977777',
+            popupMessage: 'Hello, how may we assist you?',
+            showPopup: true,
+            headerTitle: 'Connect with us on WhatsApp!', //Popup Title
+            position: "right",
+            showOnIE: true
+        });
+    });
+</script>
 </html>
