--- a/the-firm.html
+++ b/the-firm.html
@@ -27,6 +27,9 @@ maximum-scale=1.0, user-scalable=no"/>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
+    <script type="text/javascript" src="whatsapp/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="whatsapp/floating-wpp.min.js"></script>
+    <link rel="stylesheet" href="whatsapp/floating-wpp.min.css">
 </head>
 <body style="overflow-x: hidden">
 <!-- partial:index.partial.html -->
@@ -214,6 +217,7 @@ maximum-scale=1.0, user-scalable=no"/>
 </div>
 <br>
 <br>
+
 <div class="footer-section">
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
@@ -365,6 +369,18 @@ maximum-scale=1.0, user-scalable=no"/>
     </div>
 </div>
 
-
+<div id="myDiv"></div>
 </body>
+<script type="text/javascript">
+    $(function () {
+        $('#myDiv').floatingWhatsApp({
+            phone: '+917895977777',
+            popupMessage: 'Hello, how may we assist you?',
+            showPopup: true,
+            headerTitle: 'Connect with us on WhatsApp!', //Popup Title
+            position: "right",
+            showOnIE: true
+        });
+    });
+</script>
 </html>
